// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LedgerImportStep should render with multiple import 1`] = `
<div>
  <section
    class="space-y-6"
    data-testid="LedgerImportStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-3xl"
          data-testid="header__title"
        >
          Completed
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Your Ledger addresses have been imported.
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 wqzJt no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="w-40 flex-1 space-y-2 whitespace-nowrap"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
        >
          Cryptoasset
        </div>
        <div
          class="font-semibold"
        >
          ARK Devnet
        </div>
      </div>
      <div
        aria-label="ARK Devnet"
        class="Circle__CircleWrapper-uw7h4j-0 bNDQMV border-theme-primary-100 text-theme-primary-400 ring-theme-background"
        data-testid="NetworkIcon-ARK-ark.devnet"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          data-testid="NetworkIcon__icon"
          height="20"
          width="20"
        >
          <svg>
            ark.svg
          </svg>
        </div>
      </div>
    </div>
    <div>
      <ul>
        <li>
          <div
            class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 eVvAXj no-ligatures py-4"
            data-testid="TransactionDetail"
          >
            <div
              class="w-40 flex-1 space-y-2 whitespace-nowrap"
            >
              <div
                class="font-semibold"
              >
                <div
                  class="flex items-center space-x-3"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(103, 58, 183)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"70\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"35\\" cx=\\"30\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"60\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
                        title="DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq"
                      />
                    </div>
                  </div>
                  <div>
                    <div
                      class="flex-grow flex items-center no-ligatures overflow-hidden whitespace-nowrap"
                    >
                      <span
                        class="max-w-24 truncate mr-2 font-semibold text-base text-theme-text"
                        data-testid="address__wallet-name"
                      >
                        <span
                          class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                          data-testid="TruncateEnd"
                        >
                          Custom N…
                        </span>
                      </span>
                      <span
                        class="TruncateMiddle__Wrapper-sc-3j3e79-0 whitespace-nowrap text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                        data-testid="address__wallet-address"
                      >
                        DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq
                      </span>
                    </div>
                    <p
                      class="mt-1 text-sm font-medium text-theme-secondary-500"
                    >
                      <span
                        data-testid="Amount"
                      >
                        0 DARK
                      </span>
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="OriginalButton__StyledButton-sc-1y2wptt-0 izJbbP"
              data-testid="LedgerImportStep__edit-alias"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                <div
                  class="sc-bdfBwQ fPrsah"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    edit.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </li>
        <li>
          <div
            class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 eVvAXj no-ligatures py-4"
            data-testid="TransactionDetail"
          >
            <div
              class="w-40 flex-1 space-y-2 whitespace-nowrap"
            >
              <div
                class="font-semibold"
              >
                <div
                  class="flex items-center space-x-3"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                        title="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                      />
                    </div>
                  </div>
                  <div>
                    <div
                      class="flex-grow flex items-center no-ligatures overflow-hidden whitespace-nowrap"
                    >
                      <span
                        class="TruncateMiddle__Wrapper-sc-3j3e79-0 whitespace-nowrap text-theme-text font-semibold text-base"
                        data-testid="address__wallet-address"
                      >
                        DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES
                      </span>
                    </div>
                    <p
                      class="mt-1 text-sm font-medium text-theme-secondary-500"
                    >
                      <span
                        data-testid="Amount"
                      >
                        0 DARK
                      </span>
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="OriginalButton__StyledButton-sc-1y2wptt-0 izJbbP"
              data-testid="LedgerImportStep__edit-alias"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                <div
                  class="sc-bdfBwQ fPrsah"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    edit.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </section>
</div>
`;

exports[`LedgerImportStep should render with single import 1`] = `
<div>
  <section
    class="space-y-6"
    data-testid="LedgerImportStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-3xl"
          data-testid="header__title"
        >
          Completed
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Your Ledger addresses have been imported.
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 wqzJt no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="w-40 flex-1 space-y-2 whitespace-nowrap"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
        >
          Cryptoasset
        </div>
        <div
          class="font-semibold"
        >
          ARK Devnet
        </div>
      </div>
      <div
        aria-label="ARK Devnet"
        class="Circle__CircleWrapper-uw7h4j-0 bNDQMV border-theme-primary-100 text-theme-primary-400 ring-theme-background"
        data-testid="NetworkIcon-ARK-ark.devnet"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          data-testid="NetworkIcon__icon"
          height="20"
          width="20"
        >
          <svg>
            ark.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 wqzJt no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="w-40 flex-1 space-y-2 whitespace-nowrap"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
        >
          Address
        </div>
        <div
          class="font-semibold"
        >
          <div
            class="flex-grow flex items-center no-ligatures overflow-hidden whitespace-nowrap"
          >
            <span
              class="TruncateMiddle__Wrapper-sc-3j3e79-0 whitespace-nowrap text-theme-text font-semibold text-base"
              data-testid="address__wallet-address"
            >
              DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES
            </span>
          </div>
        </div>
      </div>
      <div
        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB flex-shrink-0"
        data-testid="Avatar"
      >
        <div
          class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
        >
          <img
            alt="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
            title="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
          />
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 wqzJt no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="w-40 flex-1 space-y-2 whitespace-nowrap"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
        >
          Balance
        </div>
        <div
          class="font-semibold"
        >
          <span
            data-testid="Amount"
          >
            0 DARK
          </span>
        </div>
      </div>
    </div>
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="names.DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
      >
        Wallet Name
        <span
          class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
          data-testid="FormLabel__optional"
        >
          optional
        </span>
      </label>
      <div
        class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
      >
        <div
          class="relative flex flex-1 h-full"
        >
          <input
            class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
            data-testid="ImportWallet__name-input"
            name="names.DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
          />
        </div>
      </div>
    </fieldset>
  </section>
</div>
`;

exports[`LedgerImportStep should show an error message for duplicate name 1`] = `
<div>
  <section
    class="space-y-6"
    data-testid="LedgerImportStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-3xl"
          data-testid="header__title"
        >
          Completed
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Your Ledger addresses have been imported.
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 wqzJt no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="w-40 flex-1 space-y-2 whitespace-nowrap"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
        >
          Cryptoasset
        </div>
        <div
          class="font-semibold"
        >
          ARK Devnet
        </div>
      </div>
      <div
        aria-label="ARK Devnet"
        class="Circle__CircleWrapper-uw7h4j-0 bNDQMV border-theme-primary-100 text-theme-primary-400 ring-theme-background"
        data-testid="NetworkIcon-ARK-ark.devnet"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          data-testid="NetworkIcon__icon"
          height="20"
          width="20"
        >
          <svg>
            ark.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 wqzJt no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="w-40 flex-1 space-y-2 whitespace-nowrap"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
        >
          Address
        </div>
        <div
          class="font-semibold"
        >
          <div
            class="flex-grow flex items-center no-ligatures overflow-hidden whitespace-nowrap"
          >
            <span
              class="TruncateMiddle__Wrapper-sc-3j3e79-0 whitespace-nowrap text-theme-text font-semibold text-base"
              data-testid="address__wallet-address"
            >
              DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES
            </span>
          </div>
        </div>
      </div>
      <div
        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB flex-shrink-0"
        data-testid="Avatar"
      >
        <div
          class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
        >
          <img
            alt="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
            title="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
          />
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 wqzJt no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="w-40 flex-1 space-y-2 whitespace-nowrap"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
        >
          Balance
        </div>
        <div
          class="font-semibold"
        >
          <span
            data-testid="Amount"
          >
            0 DARK
          </span>
        </div>
      </div>
    </div>
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="names.DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
      >
        Wallet Name
        <span
          class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
          data-testid="FormLabel__optional"
        >
          optional
        </span>
      </label>
      <div
        class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
      >
        <div
          class="relative flex flex-1 h-full"
        >
          <input
            class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
            data-testid="ImportWallet__name-input"
            name="names.DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
          />
        </div>
      </div>
    </fieldset>
  </section>
</div>
`;

exports[`LedgerImportStep should show an error message for duplicate name in the form 1`] = `
<div>
  <section
    class="space-y-6"
    data-testid="LedgerImportStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-3xl"
          data-testid="header__title"
        >
          Completed
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Your Ledger addresses have been imported.
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 wqzJt no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="w-40 flex-1 space-y-2 whitespace-nowrap"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
        >
          Cryptoasset
        </div>
        <div
          class="font-semibold"
        >
          ARK Devnet
        </div>
      </div>
      <div
        aria-label="ARK Devnet"
        class="Circle__CircleWrapper-uw7h4j-0 bNDQMV border-theme-primary-100 text-theme-primary-400 ring-theme-background"
        data-testid="NetworkIcon-ARK-ark.devnet"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          data-testid="NetworkIcon__icon"
          height="20"
          width="20"
        >
          <svg>
            ark.svg
          </svg>
        </div>
      </div>
    </div>
    <div>
      <ul>
        <li>
          <div
            class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 eVvAXj no-ligatures py-4"
            data-testid="TransactionDetail"
          >
            <div
              class="w-40 flex-1 space-y-2 whitespace-nowrap"
            >
              <div
                class="font-semibold"
              >
                <div
                  class="flex items-center space-x-3"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(103, 58, 183)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"70\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"35\\" cx=\\"30\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"60\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
                        title="DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq"
                      />
                    </div>
                  </div>
                  <div>
                    <div
                      class="flex-grow flex items-center no-ligatures overflow-hidden whitespace-nowrap"
                    >
                      <span
                        class="max-w-24 truncate mr-2 font-semibold text-base text-theme-text"
                        data-testid="address__wallet-name"
                      >
                        <span
                          class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                          data-testid="TruncateEnd"
                        >
                          Custom N…
                        </span>
                      </span>
                      <span
                        class="TruncateMiddle__Wrapper-sc-3j3e79-0 whitespace-nowrap text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                        data-testid="address__wallet-address"
                      >
                        DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq
                      </span>
                    </div>
                    <p
                      class="mt-1 text-sm font-medium text-theme-secondary-500"
                    >
                      <span
                        data-testid="Amount"
                      >
                        0 DARK
                      </span>
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="OriginalButton__StyledButton-sc-1y2wptt-0 izJbbP"
              data-testid="LedgerImportStep__edit-alias"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                <div
                  class="sc-bdfBwQ fPrsah"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    edit.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </li>
        <li>
          <div
            class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 eVvAXj no-ligatures py-4"
            data-testid="TransactionDetail"
          >
            <div
              class="w-40 flex-1 space-y-2 whitespace-nowrap"
            >
              <div
                class="font-semibold"
              >
                <div
                  class="flex items-center space-x-3"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                        title="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                      />
                    </div>
                  </div>
                  <div>
                    <div
                      class="flex-grow flex items-center no-ligatures overflow-hidden whitespace-nowrap"
                    >
                      <span
                        class="TruncateMiddle__Wrapper-sc-3j3e79-0 whitespace-nowrap text-theme-text font-semibold text-base"
                        data-testid="address__wallet-address"
                      >
                        DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES
                      </span>
                    </div>
                    <p
                      class="mt-1 text-sm font-medium text-theme-secondary-500"
                    >
                      <span
                        data-testid="Amount"
                      >
                        0 DARK
                      </span>
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="OriginalButton__StyledButton-sc-1y2wptt-0 izJbbP"
              data-testid="LedgerImportStep__edit-alias"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                <div
                  class="sc-bdfBwQ fPrsah"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    edit.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </section>
</div>
`;
